# Durak

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE
app/: CMakeLists.txt  main.cpp
cmake/: FormatTools.cmake  ProjectCoverage.cmake
include/durak/: engine.hpp
include/durak/engine/: action_rule.hpp  card.hpp  config.hpp  engine.hpp  engine_fwd.hpp  game_rule.hpp  game_rule_view.hpp  modulo.hpp  move.hpp  player.hpp  player_action.hpp  player_view.hpp  table.hpp
include/durak/rules/: card_face.hpp  deck_init.hpp  first_turn.hpp  rules.hpp
src/: CMakeLists.txt
src/durak/: CMakeLists.txt  engine.cpp  game_rule_view.cpp  player.cpp  player_view.cpp  table.cpp
src/durak/engine/: CMakeLists.txt  engine.cpp  game_rule_view.cpp  player_view.cpp  table.cpp
src/durak/rules/: CMakeLists.txt  card_face.cpp  deck_init.cpp
tests/: CMakeLists.txt
tests/static/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/engine/: CMakeLists.txt  engine.cpp  game_rule_view.cpp  modulo.cpp  player.cpp  player_view.cpp  table.cpp  test_mediator.hpp
tests/unit/rules/: CMakeLists.txt  deck_init.cpp
